Prepare the changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 #################
+## Visual Studio
+#################
+
+.vs/
+[Oo]bj/
+[Bb]in/
+
+#################
 ## Eclipse
 #################
 
